# BrainSpark

./: .env.example  .gitignore  AI_MODEL_INTEGRATION.md  DEPLOYMENT_GUIDE.md  FEATURE_GAP_ANALYSIS.md  GAP_ANALYSIS.md  IMPLEMENTATION_STATUS.md  INSTALL.bat  INTEGRATION_COMPLETE.md  README.md  brainspark-complete-archive.txt  brainspark-deploy-script.sh  brainspark-docker.txt  brainspark-gamification.py  brainspark-gcp.txt  brainspark-landing-page.tsx  brainspark-multiplayer.py  cloudbuild-auto.yaml  cloudbuild-backend-only.yaml  cloudbuild-frontend-only.yaml  cloudbuild-migrate.yaml  cloudbuild-setup-db.yaml  cloudbuild-setup.yaml  cloudbuild-simple.yaml  cloudbuild.yaml  docker-compose.local.yml  docker-compose.yml  grant_permissions.sql  test_ai_models.py
.claude/: settings.local.json
.github/workflows/: deploy.yml  pr.yml  test.yml
backend/: Dockerfile  cloudbuild.yaml  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/services/: __init__.py  gamification.py  multiplayer.py
database/: schema.sql
docs/architecture/: 00-GCP-DEPLOYMENT-ARCHITECTURE.md  01-CODE-INVENTORY.md
docs/deployment/: CLOUD-BUILD-GUIDE.md
docs/design/: 05-UI-UX-DESIGN.md  17-ASSET-SPECIFICATIONS.md
docs/operations/: 16-RUNBOOKS.md  18-EMAIL-TEMPLATES.md  19-SUPPORT-PLAYBOOK.md
docs/planning/: 01-PROJECT-OVERVIEW.md  02-REQUIREMENTS-GATHERING.md  (+5 more)
frontend/: Dockerfile  cloudbuild.yaml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: create-database.sql  deploy-production.bat  deploy-production.sh  docker-local.bat  import-schema.bat  setup-database.py  setup-secrets.bat  setup-secrets.sh  setup-windows.bat  start-local.bat  stop-local.bat  test-local.bat
terraform/: outputs.tf  variables.tf
(+20 files in other folders)
